@@ -4129,7 +4129,6 @@ gettable(id)
 	return NEW_CONST(id);
     }
     else if (is_class_id(id)) {
-	if (in_single) return NEW_CVAR2(id);
 	return NEW_CVAR(id);
     }
     rb_bug("invalid id for gettable");
@@ -4187,7 +4186,7 @@ assignable(id, val)
 	return NEW_CDECL(id, val);
     }
     else if (is_class_id(id)) {
-	if (in_single) return NEW_CVASGN(id, val);
+	if (in_def || in_single) return NEW_CVASGN(id, val);
 	return NEW_CVDECL(id, val);
     }
     else {
